# valatest

./: Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
config/: config.h.in
src/: Makefile.am  Makefile.in  SyncMain.c
ui/: sample.ui
vala/: Makefile.am  Makefile.in  SyncSample.vala  sample.vala
